poging om border een kleur te geven

--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -207,7 +207,7 @@
             <div class="accordion-body mandenPageAccordion">
               <div class="row mt-5">
                 <div class="col-lg-4 col-md-6 mb-2">
-                  <div class="card w-75 mb-3 ms-5">
+                  <div class="card w-75 mb-3 ms-5 card-body border border-4 rounded-3 mandenPage">
                     <img src="../Images/Sport.jpg" class="card-img-top h-100" style="height: 50vh" alt="afbeelding van de items in de sport mand">
                     <div class="card-body">
                       <p class="card-text">Sport mand items</p>
