openings uren toegevoegd

--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -96,7 +96,8 @@
                       </button>
                     </div>
                     <div class="card-body">
-                      <p class="card-text">Afbeeldingen van de chill & unwind mand en zijn items</p>
+                      <p class="card-text">Chill & Unwind. <br>
+                      De perfecte mand om na een stressvolle dag tot rust te komen.</p>
                     </div>
                   </div>
                 </div>
@@ -150,12 +151,6 @@
                         <div class="carousel-item">
                           <img src="../Images/StudyBuddy(2).jpg" class="d-block w-100" alt="afbeelding van één van de mogelijke studdy buddy manden">
                         </div>
-                        <div class="carousel-item">
-                          <img src="../Images/StudyBuddy(3).jpg" class="d-block w-100" alt="afbeelding  van de andere mogelijke studdy buddy items">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="../Images/StudyBuddy(4).jpg" class="d-block w-100" alt="afbeelding van de andere mogelijke studdy buddy mand">
-                      </div>
                       </div>
                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselStuddyBuddy" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -167,7 +162,7 @@
                       </button>
                     </div>
                     <div class="card-body">
-                      <p class="card-text">Afbeeldingen van de 2 study buddy manden en hun items</p>
+                      <p class="card-text">Afbeeldingen van de study buddy mand en zijn items</p>
                     </div>
                   </div>
                 </div>
@@ -184,7 +179,7 @@
                   </div>
                   <p class="mandenPage">deze doos bevat:</p>
                   <ol>
-                    <li class="mandenPage">Stumble guys figuren</li>
+                    <li class="mandenPage">Stumble guys figuur</li>
                     <li class="mandenPage">Planner</li>
                     <li class="mandenPage">Mini highlighterset</li>
                     <li class="mandenPage">Office essentials index tabs</li>
