--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -203,7 +203,24 @@
               <div class="row mt-5">
                 <div class="col-lg-4 col-md-6 mb-2">
                   <div class="card w-75 mb-3 ms-5 card-body border border-4 rounded-3 mandenPage">
-                    <img src="../Images/Sport.jpg" class="card-img-top h-100" style="height: 50vh" alt="afbeelding van de items in de sport mand">
+                    <div id="carouselSport" class="carousel slide">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="../Images/Sport.jpg" class="d-block w-100" alt="de Sport items">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="../Images/Sport (1).jpg" class="d-block w-100" alt="de Sport mand">
+                        </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselSport" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselSport" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
+                    </div>
                     <div class="card-body">
                       <p class="card-text">Sport mand items</p>
                     </div>
@@ -313,7 +330,24 @@
                 <div class="col-lg-4 col-md-6">
                   <!-- Start van de kaart -->
                   <div class="card w-75 mb-3 ms-5 card-body border border-4 rounded-3 mandenPage">
-                    <img src="../Images/SnackAttack(Gluten en lactosevrij).jpg" class="card-img-top h-100" style="height: 50vh" alt="afbeelding van de items in de Snack attack mand">
+                    <div id="carouselSnackAttackGluten&Lactosevrij" class="carousel slide">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="../Images/SnackAttack(Gluten en lactosevrij).jpg" class="d-block w-100" alt="de chill & unwind items">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="../Images/SnackAttack(Gluten en lactosevrij) (1).jpg" class="d-block w-100" alt="de chill & unwind mand">
+                        </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselSnackAttackGluten&Lactosevrij" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselSnackAttackGluten&Lactosevrij" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
+                    </div>
                     <div class="card-body">
                       <p class="card-text">Snack attack (gluten en lactosevrij) mand items</p>
                     </div>
