goede verkoopzinnetjes toegevoegd
(sorry senna maar "Afbeelding snack attack mand" is niet heel aantrekkelijk voor de klanten) Ib heb toch nog kwaliteiten uit mijn 4 jaar BO

--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -96,8 +96,7 @@
                       </button>
                     </div>
                     <div class="card-body">
-                      <p class="card-text">Chill & Unwind. <br>
-                      De perfecte mand om na een stressvolle dag tot rust te komen.</p>
+                      <p class="card-text mandenPage">Een stressvolle dag achter de rug en nood aan ontspanning? De chill & unwind mand is hier om je te redden!</p>
                     </div>
                   </div>
                 </div>
@@ -106,7 +105,7 @@
                 <div class="col-lg-8 col-md-6 ms-md-0 ms-5">
                   <div class="row">
                     <div class="col-lg-6">
-                      <h4>Chill & Unwind</h4>
+                      <h4 class="mandenPage">Chill & Unwind</h4>
                     </div>
                     <div class="col-lg-6">
                       <h4 class="mandenPage">Prijs: €25,00</h4>
@@ -162,7 +161,7 @@
                       </button>
                     </div>
                     <div class="card-body">
-                      <p class="card-text">Afbeeldingen van de study buddy mand en zijn items</p>
+                      <p class="card-text mandenPage">Ook last van examen stress? Deze goedies zijn de perfecte studdy buddy!</p>
                     </div>
                   </div>
                 </div>
@@ -222,7 +221,7 @@
                       </button>
                     </div>
                     <div class="card-body">
-                      <p class="card-text">Sport mand items</p>
+                      <p class="card-text mandenPage">Ben jij een sport liefhebber en blijf je graag constant fit? Dan zijn deze gadgets exact wat je zoekt!</p>
                     </div>
                   </div>
                 </div>
@@ -286,7 +285,7 @@
                       </button>
                     </div>
                     <div class="card-body">
-                      <p class="card-text">Afbeeldingen van snack attack mand en zijn items</p>
+                      <p class="card-text mandenPage">Heb je even extra energie nodig? Attack onze snacks voor die boost die je zoekt.</p>
                     </div>
                   </div>
                 </div>
@@ -349,7 +348,7 @@
                       </button>
                     </div>
                     <div class="card-body">
-                      <p class="card-text">Snack attack (gluten en lactosevrij) mand items</p>
+                      <p class="card-text mandenPage">Wil ook onze snacks attacken maar mag je geen lactose en gluten consumeren? We denken ook aan jou!</p>
                     </div>
                   </div>
                 </div>
