--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -348,7 +348,7 @@
                       </button>
                     </div>
                     <div class="card-body">
-                      <p class="card-text mandenPage">Wil ook onze snacks attacken maar mag je geen lactose en gluten consumeren? We denken ook aan jou!</p>
+                      <p class="card-text mandenPage">Wil je ook onze snacks attacken maar mag je geen lactose en gluten consumeren? We denken ook aan jou!</p>
                     </div>
                   </div>
                 </div>
