Geschenkmanden items aangepast
items aangepast geschenkmanden

--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -111,9 +111,9 @@
                       <h4 class="mandenPage">Prijs: €25,00</h4>
                     </div>
                   </div>
-                  <p class="mandenPage">deze doos bevat:</p>
+                  <p class="mandenPage">Deze doos bevat:</p>
                   <ol>
-                    <li class="mandenPage">Badolie</li>
+                    <li class="mandenPage">Badolie en bruisbalset</li>
                     <li class="mandenPage">Bad- en douchegel</li>
                     <li class="mandenPage">Geurkaars</li>
                     <li class="mandenPage">Bodyscrub</li>
@@ -133,7 +133,7 @@
             <button class="accordion-button" type="button" data-bs-toggle="collapse"
               data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true"
               aria-controls="panelsStayOpen-collapseTwo">
-              Studdy Buddy
+              Study Buddy
             </button>
           </h2>
           <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse show">
@@ -161,7 +161,7 @@
                       </button>
                     </div>
                     <div class="card-body">
-                      <p class="card-text mandenPage">Ook last van examen stress? Deze goedies zijn de perfecte studdy buddy!</p>
+                      <p class="card-text mandenPage">Ook last van examen stress? Deze goedies zijn de perfecte study buddy!</p>
                     </div>
                   </div>
                 </div>
@@ -170,19 +170,19 @@
                 <div class="col-lg-8 col-md-6 ms-md-0 ms-5">
                   <div class="row">
                     <div class="col-lg-6">
-                      <h4 class="mandenPage">Studdy Buddy</h4>
+                      <h4 class="mandenPage">Study Buddy</h4>
                     </div>
                     <div class="col-lg-6">
                       <h4 class="mandenPage">Prijs: €13,00</h4>
                     </div>
                   </div>
-                  <p class="mandenPage">deze doos bevat:</p>
+                  <p class="mandenPage">Deze doos bevat:</p>
                   <ol>
-                    <li class="mandenPage">Stumble guys figuur</li>
+                    <li class="mandenPage">Stumble guys figuur (knijpfiguur)</li>
                     <li class="mandenPage">Planner</li>
-                    <li class="mandenPage">Mini highlighterset</li>
-                    <li class="mandenPage">Office essentials index tabs</li>
-                    <li class="mandenPage">Pilot balpennen Frixionball sticks</li>
+                    <li class="mandenPage">Mini floustiften</li>
+                    <li class="mandenPage">Indextabs</li>
+                    <li class="mandenPage">Pilot balpennen</li>
                   </ol>
                 </div>
               </div>
@@ -194,7 +194,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="true" aria-controls="panelsStayOpen-collapseThree">
-              Sport
+              Fit & Fuel
             </button>
           </h2>
           <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse show">
@@ -228,22 +228,21 @@
                 <div class="col-lg-8 col-md-6">
                   <div class="row">
                     <div class="col-lg-6">
-                      <h4 class="mandenPage">Sport</h4>
+                      <h4 class="mandenPage">Fit & Fuel</h4>
                     </div>
                     <div class="col-lg-6">
                       <h4 class="mandenPage">Prijs: €25,00</h4>
                     </div>
                   </div>
-                  <p class="mandenPage">deze doos bevat:</p>
+                  <p class="mandenPage">Deze doos bevat:</p>
                   <ol>
                     <li class="mandenPage">Springtouw</li>
                     <li class="mandenPage">Weestandbanden</li>
-                    <li class="mandenPage">Kaytan handtrainer</li>
+                    <li class="mandenPage">Handtrainer</li>
                     <li class="mandenPage">Yogamat</li>
                     <li class="mandenPage">Bidon</li>
-                    <li class="mandenPage">2KEEP energierepen</li>
+                    <li class="mandenPage">Energierepen</li>
                     <li class="mandenPage">Dadels</li>
-                    <li class="mandenPage">Bamboe opbergmand</li>
                   </ol>
                 </div>
               </div>
@@ -302,7 +301,7 @@
                   </div>
                   <p class="mandenPage">deze doos bevat:</p>
                   <ol>
-                    <li class="mandenPage">Oreo</li>
+                    <li class="mandenPage">Oreo crunchy bites</li>
                     <li class="mandenPage">Haribo fun mix</li>
                     <li class="mandenPage">Patisserie stroppwaffles</li>
                     <li class="mandenPage">Milka chocolade naps mix</li>
