--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -225,7 +225,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-8 col-md-6">
+                <div class="col-lg-8 col-md-6 ms-md-0 ms-5">
                   <div class="row">
                     <div class="col-lg-6">
                       <h4 class="mandenPage">Fit & Fuel</h4>
