--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -111,7 +111,7 @@
                       <h4 class="mandenPage">Prijs: €25,00</h4>
                     </div>
                   </div>
-                  <p class="mandenPage">Deze doos bevat:</p>
+                  <p class="mandenPage">deze mand bevat</p>
                   <ol>
                     <li class="mandenPage">Badolie en bruisbalset</li>
                     <li class="mandenPage">Bad- en douchegel</li>
@@ -161,7 +161,7 @@
                       </button>
                     </div>
                     <div class="card-body">
-                      <p class="card-text mandenPage">Ook last van examen stress? Deze goedies zijn de perfecte study buddy!</p>
+                      <p class="card-text mandenPage">Ook last van examenstress? Deze goodies zijn de perfecte study buddy!</p>
                     </div>
                   </div>
                 </div>
@@ -178,7 +178,7 @@
                   </div>
                   <p class="mandenPage">Deze doos bevat:</p>
                   <ol>
-                    <li class="mandenPage">Stumble guys figuur (knijpfiguur)</li>
+                    <li class="mandenPage">Stumble Guys-figuur (knijpfiguur)</li>
                     <li class="mandenPage">Planner</li>
                     <li class="mandenPage">Mini floustiften</li>
                     <li class="mandenPage">Indextabs</li>
@@ -221,7 +221,7 @@
                       </button>
                     </div>
                     <div class="card-body">
-                      <p class="card-text mandenPage">Ben jij een sport liefhebber en blijf je graag constant fit? Dan zijn deze gadgets exact wat je zoekt!</p>
+                      <p class="card-text mandenPage">Ben jij een sportliefhebber en blijf je graag constant fit? Deze gadgets zullen extra fuel geven!</p>
                     </div>
                   </div>
                 </div>
@@ -234,10 +234,10 @@
                       <h4 class="mandenPage">Prijs: €25,00</h4>
                     </div>
                   </div>
-                  <p class="mandenPage">Deze doos bevat:</p>
+                  <p class="mandenPage">deze mand bevat:</p>
                   <ol>
                     <li class="mandenPage">Springtouw</li>
-                    <li class="mandenPage">Weestandbanden</li>
+                    <li class="mandenPage">Weerstandbanden</li>
                     <li class="mandenPage">Handtrainer</li>
                     <li class="mandenPage">Yogamat</li>
                     <li class="mandenPage">Bidon</li>
@@ -284,7 +284,7 @@
                       </button>
                     </div>
                     <div class="card-body">
-                      <p class="card-text mandenPage">Heb je even extra energie nodig? Attack onze snacks voor die boost die je zoekt.</p>
+                      <p class="card-text mandenPage">Heb je even extra energie nodig? Attack onze snacks voor de boost die je zoekt.</p>
                     </div>
                   </div>
                 </div>
@@ -299,11 +299,11 @@
                       <h4 class="mandenPage">Prijs: €16,00</h4>
                     </div>
                   </div>
-                  <p class="mandenPage">deze doos bevat:</p>
+                  <p class="mandenPage">deze mand bevat:</p>
                   <ol>
                     <li class="mandenPage">Oreo crunchy bites</li>
                     <li class="mandenPage">Haribo fun mix</li>
-                    <li class="mandenPage">Patisserie stroppwaffles</li>
+                    <li class="mandenPage">Patisserie stroopwaffles</li>
                     <li class="mandenPage">Milka chocolade naps mix</li>
                     <li class="mandenPage">Chocolademelk-sticks</li>
                   </ol>
@@ -357,7 +357,7 @@
                   <div class="row">
                     <div class="col-lg-6">
                       <h4 class="mandenPage">Snack attack </h4>
-                      <h4 class="mandenPage">(gluten en lactosevrij)</h4>
+                      <h4 class="mandenPage">(gluten-en lactosevrij)</h4>
                     </div>
                     <div class="col-lg-6">
                       <h4 class="mandenPage">Prijs: €16,00</h4>
@@ -370,8 +370,8 @@
                     <li class="mandenPage">Zure glimwormen</li>
                     <li class="mandenPage">Haribo mega mix</li>
                     <li class="mandenPage">Sprite</li>
-                    <li class="mandenPage">Doritos bits sweet paprika</li>
-                    <li class="mandenPage">Snacks world honey cashew</li>
+                    <li class="mandenPage">Doritos Bits sweet paprika</li>
+                    <li class="mandenPage">Snacks Of The World honey cashew</li>
                   </ol>
                 </div>
               </div>
