--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
       <p class="homepage">
         Wij zijn enthousiaste leerlingen van de secundaire school Sint-Gregorius, gedreven om een verschil te maken met
         onze leeronderneming. <br>
-        Onder begeleiding van onze leerkrachten, mevrouw Gossé en mevrouw Van den Broeck, <br>
-        zijn we gestart met een uniek project: het ontwikkelen en verkopen van anti-stress pakketten. <br>
+        Onder begeleiding van onze leerkrachten, mevrouw Gossé en mevrouw Vanden Broeck, <br>
+        zijn we gestart met een uniek project: het ontwikkelen en verkopen van  anti-stresspakketten. <br>
         Deze pakketten zijn zorgvuldig samengesteld om je te helpen ontspannen en stress te verminderen in het
         dagelijkse
         leven. <br>
         Met onze leeronderneming willen we niet alleen ervaring opdoen in het bedrijfsleven, maar ook bijdragen aan een
-        gezondere, ontspannen leefstijl. <br>
-        Neem een kijkje in ons aanbod en ontdek hoe onze producten jou kunnen helpen meer rust te vinden!
+        gezondere, ontspannen levensstijl. <br>
+        Neem een kijkje naar ons aanbod en ontdek hoe onze producten jou kunnen helpen meer rust te vinden!
       </p>
   </div>
   <!-- Contact info -->
