--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -316,13 +316,13 @@
         <!-- Accordion item 5: snack attack (Gluten en Lactosevrij) -->
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+            <button class="accordion-button mandenPage" type="button" data-bs-toggle="collapse"
               data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="true"
               aria-controls="panelsStayOpen-collapseFive">
               Snack Attack (Gluten en Lactosevrij)
             </button>
           </h2>
-          <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse show">
+          <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse show">
             <div class="accordion-body mandenPageAccordion">
               <div class="row mt-5">
                 <div class="col-lg-4 col-md-6">
