css aanpassing homepage

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <h2 class="homepage">Contact info</h1>
       <p class="homepage">Email : <a
           href="mailto:leeronderneming6BO@ll.sintgregorius.be">leeronderneming6BO@ll.sintgregorius.be</a> </p>
-      <p class="homepage">Wij zijn bereikbaar op dinsdag tussen 9:20 en 12:00</p>
+      <p class="homepage" style="font-size: large;">Wij zijn bereikbaar op dinsdag tussen 9:20 en 12:00</p>
   </footer>
 </body>
 
