--- a/Html/ZenZone_FAQ.html
+++ b/Html/ZenZone_FAQ.html
@@ -15,8 +15,7 @@
     href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=DM+Serif+Display:ital@0;1&family=Merienda:wght@300..900&display=swap"
     rel="stylesheet">
   <!-- Bootstrap link -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
@@ -49,6 +48,23 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+    <head>
+      <div class="container">
+        <div class="row mb-5">
+          <div class="col-lg-6 col-md-8 offset-lg-3 offset-md-2 mt-5 mb-5">
+            <h1 class="text-center">Veelgestelde Vragen<h1>
+          </div>
+        </div>
+      </head>
+      <div class="row mt-5">
+        <div class="col-lg-4 col-md-6 offset-lg-1">
+          <h2>Wat is Gip?</h2>
+        </div>
+        <div class="col-lg-4 col-md-6 offset-lg-2">
+          <h2>Wat bieden wij aan?</h2>
+        </div>
+      </div>
+    </div>
 </body>
 
 </html>
