FAQ tekst en collomen
alle tekst toegevoegd in kollomen op de FAQ pagina

--- a/Html/ZenZone_FAQ.html
+++ b/Html/ZenZone_FAQ.html
@@ -59,9 +59,27 @@
       <div class="row mt-5">
         <div class="col-lg-4 col-md-6 offset-lg-1">
           <h2>Wat is Gip?</h2>
+          <p>Een GIP, of geïntegreerde proef, is een soort eindopdracht die leerlingen in het secundair onderwijs in Vlaanderen maken. Bij een GIP werk je aan een grote opdracht waarin je laat zien wat je geleerd hebt in verschillende vakken. Het doel is om te bewijzen dat je zelfstandig kunt werken, een probleem kunt oplossen en kennis en vaardigheden uit meerdere vakken kunt combineren.</p>
         </div>
         <div class="col-lg-4 col-md-6 offset-lg-2">
+          <h2>Hoe kan ik bestellen?</h2>
+          <p>U kan uw bestelling plaatsen via onze <a href="ZenZone_BestelFormulier.html">bestelformulieren</a>, de flyers met een handige QR-code die u rechtstreeks naar het bestelformulier brengt of eenvoudig via de link op onze website.</p>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-lg-4 col-md-6 offset-lg-1">
           <h2>Wat bieden wij aan?</h2>
+          <p>Wij bieden <a href="ZenZone_Geschenkmanden.html">geschenkmanden</a> aan in 5 verschillende thema’s die te maken hebben met ontstressen. </p>
+        </div>
+        <div class="col-lg-4 col-md-6 offset-lg-2">
+          <h2>Hoe kan ik betalen?</h2>
+          <p>U kan contant betalen bij mevrouw Gossé of betalen via overschrijving.</p>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-lg-4 col-md-6 offset-lg-4 offset-md-3">
+          <h2>Wat doen we met de winst?</h2>
+          <p>De opbrengst van de verkoop wordt gebruikt om een deel van de  100-dagen te financieren.</p>
         </div>
       </div>
     </div>
