background added to test

--- a/Html/ZenZone_FAQ.html
+++ b/Html/ZenZone_FAQ.html
@@ -15,10 +15,11 @@
     href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=DM+Serif+Display:ital@0;1&family=Merienda:wght@300..900&display=swap"
     rel="stylesheet">
   <!-- Bootstrap link -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="FAQPage background-container">
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
@@ -48,41 +49,56 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-    <head>
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-lg-6 col-md-8 offset-lg-3 offset-md-2 mt-5 mb-5">
-            <h1 class="text-center">Veelgestelde Vragen<h1>
-          </div>
-        </div>
-      </head>
-      <div class="row mt-5">
-        <div class="col-lg-4 col-md-6 offset-lg-1">
-          <h2>Wat is Gip?</h2>
-          <p>Een GIP, of geïntegreerde proef, is een soort eindopdracht die leerlingen in het secundair onderwijs in Vlaanderen maken. Bij een GIP werk je aan een grote opdracht waarin je laat zien wat je geleerd hebt in verschillende vakken. Het doel is om te bewijzen dat je zelfstandig kunt werken, een probleem kunt oplossen en kennis en vaardigheden uit meerdere vakken kunt combineren.</p>
-        </div>
-        <div class="col-lg-4 col-md-6 offset-lg-2">
-          <h2>Hoe kan ik bestellen?</h2>
-          <p>U kan uw bestelling plaatsen via onze <a href="ZenZone_BestelFormulier.html">bestelformulieren</a>, de flyers met een handige QR-code die u rechtstreeks naar het bestelformulier brengt of eenvoudig via de link op onze website.</p>
-        </div>
-      </div>
-      <div class="row mt-5">
-        <div class="col-lg-4 col-md-6 offset-lg-1">
-          <h2>Wat bieden wij aan?</h2>
-          <p>Wij bieden <a href="ZenZone_Geschenkmanden.html">geschenkmanden</a> aan in 5 verschillende thema’s die te maken hebben met ontstressen. </p>
-        </div>
-        <div class="col-lg-4 col-md-6 offset-lg-2">
-          <h2>Hoe kan ik betalen?</h2>
-          <p>U kan contant betalen bij mevrouw Gossé of betalen via overschrijving.</p>
-        </div>
-      </div>
-      <div class="row mt-5">
-        <div class="col-lg-4 col-md-6 offset-lg-4 offset-md-3">
-          <h2>Wat doen we met de winst?</h2>
-          <p>De opbrengst van de verkoop wordt gebruikt om een deel van de  100-dagen te financieren.</p>
-        </div>
+
+
+  <div class="container">
+    <div class="row mb-5">
+      <div class="col-lg-6 col-md-8 offset-lg-3 offset-md-2 mt-5 mb-5">
+        <h1 class="text-center FAQPage">Veelgestelde Vragen</h1>
       </div>
     </div>
+  </div>
+
+
+  <div class="row mt-5">
+    <div class="col-lg-4 col-md-6 offset-lg-1">
+      <h2 class="FAQPage">Wat is Gip?</h2>
+      <p class="FAQPage">Een GIP, of geïntegreerde proef, is een soort eindopdracht die leerlingen in het secundair
+        onderwijs in Vlaanderen maken. Bij een GIP werk je aan een grote opdracht waarin je laat zien wat je geleerd
+        hebt in verschillende vakken. Het doel is om te bewijzen dat je zelfstandig kunt werken, een probleem kunt
+        oplossen en kennis en vaardigheden uit meerdere vakken kunt combineren.</p>
+    </div>
+    <div class="col-lg-4 col-md-6 offset-lg-2">
+      <h2 class="FAQPage">Hoe kan ik bestellen?</h2>
+      <p class="FAQPage">U kan uw bestelling plaatsen via onze <a
+          href="ZenZone_BestelFormulier.html">bestelformulieren</a>, de flyers met een handige QR-code die u
+        rechtstreeks naar het bestelformulier brengt of eenvoudig via de link op onze website.</p>
+    </div>
+  </div>
+
+  <div class="row mt-5">
+    <div class="col-lg-4 col-md-6 offset-lg-1">
+      <h2 class="FAQPage">Wat bieden wij aan?</h2>
+      <p class="FAQPage">Wij bieden <a href="ZenZone_Geschenkmanden.html">geschenkmanden</a> aan in 5 verschillende
+        thema’s die te maken hebben met ontstressen. </p>
+    </div>
+    <div class="col-lg-4 col-md-6 offset-lg-2">
+      <h2 class="FAQPage">Hoe kan ik betalen?</h2>
+      <p class="FAQPage">U kan contant betalen bij mevrouw Gossé of betalen via overschrijving.</p>
+    </div>
+  </div>
+
+  <div class="row mt-5">
+    <div class="col-lg-4 col-md-6 offset-lg-4 offset-md-3">
+      <h2 class="FAQPage">Wat doen we met de winst?</h2>
+      <p class="FAQPage">De opbrengst van de verkoop wordt gebruikt om een deel van de 100-dagen te financieren.</p>
+    </div>
+  </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
