--- a/Html/ZenZone_FAQ.html
+++ b/Html/ZenZone_FAQ.html
@@ -60,15 +60,15 @@
   </div>
 
 
-  <div class="row mt-5">
-    <div class="col-lg-4 col-md-6 offset-lg-1">
+  <div class="row">
+    <div class="col-lg-4 col-md-6 offset-lg-1 mt-5">
       <h2 class="FAQPage">Wat is Gip?</h2>
       <p class="FAQPage">Een GIP, of geïntegreerde proef, is een soort eindopdracht die leerlingen in het secundair
         onderwijs in Vlaanderen maken. Bij een GIP werk je aan een grote opdracht waarin je laat zien wat je geleerd
         hebt in verschillende vakken. Het doel is om te bewijzen dat je zelfstandig kunt werken, een probleem kunt
         oplossen en kennis en vaardigheden uit meerdere vakken kunt combineren.</p>
     </div>
-    <div class="col-lg-4 col-md-6 offset-lg-2">
+    <div class="col-lg-4 col-md-6 offset-lg-2 mt-5">
       <h2 class="FAQPage">Hoe kan ik bestellen?</h2>
       <p class="FAQPage">U kan uw bestelling plaatsen via onze <a
           href="ZenZone_BestelFormulier.html">bestelformulieren</a>, de flyers met een handige QR-code die u
@@ -76,20 +76,20 @@
     </div>
   </div>
 
-  <div class="row mt-5">
-    <div class="col-lg-4 col-md-6 offset-lg-1">
+  <div class="row">
+    <div class="col-lg-4 col-md-6 offset-lg-1 mt-5">
       <h2 class="FAQPage">Wat bieden wij aan?</h2>
       <p class="FAQPage">Wij bieden <a href="ZenZone_Geschenkmanden.html">geschenkmanden</a> aan in 5 verschillende
         thema’s die te maken hebben met ontstressen. </p>
     </div>
-    <div class="col-lg-4 col-md-6 offset-lg-2">
+    <div class="col-lg-4 col-md-6 offset-lg-2 mt-5">
       <h2 class="FAQPage">Hoe kan ik betalen?</h2>
       <p class="FAQPage">U kan contant betalen bij mevrouw Gossé of betalen via overschrijving.</p>
     </div>
   </div>
 
-  <div class="row mt-5">
-    <div class="col-lg-4 col-md-6 offset-lg-4 offset-md-3">
+  <div class="row">
+    <div class="col-lg-4 col-md-6 offset-lg-4 offset-md-3 mt-5">
       <h2 class="FAQPage">Wat doen we met de winst?</h2>
       <p class="FAQPage">De opbrengst van de verkoop wordt gebruikt om een deel van de 100-dagen te financieren.</p>
     </div>
