--- a/Html/ZenZone_BestelFormulier.html
+++ b/Html/ZenZone_BestelFormulier.html
@@ -54,7 +54,7 @@
   <!--Bestelformulier link-->
   <iframe
     src="https://docs.google.com/forms/d/e/1FAIpQLScTvIRC6cWopLhjzRNSbVk_biwhOV0yPTD52n2LSsJ1nsfg2Q/viewform?embedded=true"
-    width="1150" height="1750" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Laden…</iframe>
+    style="width: 100%" height="1750" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Laden…</iframe>
 </body>
 
 </html>
