--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -188,7 +188,7 @@
                     <h4 class="mandenPage">Prijs: €13,00</h4>
                   </div>
                 </div>
-                <p class="mandenPage">Deze doos bevat:</p>
+                <p class="mandenPage">Deze mand bevat:</p>
                 <ol>
                   <li class="mandenPage">Stumble Guys-figuur (knijpfiguur)</li>
                   <li class="mandenPage">Planner</li>
@@ -390,7 +390,7 @@
                     <h4 class="mandenPage">Prijs: €16,00</h4>
                   </div>
                 </div>
-                <p class="mandenPage">deze doos bevat:</p>
+                <p class="mandenPage">deze mand bevat:</p>
                 <ol>
                   <li class="mandenPage">Cashewnoten</li>
                   <li class="mandenPage">Fuze tea</li>
