--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="html/ZenZone_Geschenkmanden.html">Geschenkmanden</a>
+            <a class="nav-link" href="Html/ZenZone_Geschenkmanden.html">Geschenkmanden</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="html/ZenZone_BestelFormulier.html">Bestelformulier</a>
+            <a class="nav-link" href="Html/ZenZone_BestelFormulier.html">Bestelformulier</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="html/ZenZone_FAQ.html">FAQ</a>
+            <a class="nav-link" href="Html/ZenZone_FAQ.html">FAQ</a>
           </li>
         </ul>
       </div>
