--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -119,14 +119,14 @@
                   </div>
                 </div>
                 <p class="mandenPage">deze mand bevat</p>
-                <ol>
-                  <li class="mandenPage">Badolie en bruisbalset</li>
-                  <li class="mandenPage">Bad- en douchegel</li>
-                  <li class="mandenPage">Geurkaars</li>
-                  <li class="mandenPage">Bodyscrub</li>
-                  <li class="mandenPage">Gezichtsmasker</li>
-                  <li class="mandenPage">Voetmasker</li>
-                  <li class="mandenPage">Warmtekussen</li>
+                <ol class="mandenPage">
+                  <li>Badolie en bruisbalset</li>
+                  <li>Bad- en douchegel</li>
+                  <li>Geurkaars</li>
+                  <li>Bodyscrub</li>
+                  <li>Gezichtsmasker</li>
+                  <li>Voetmasker</li>
+                  <li>Warmtekussen</li>
                 </ol>
               </div>
             </div>
@@ -188,13 +188,13 @@
                     <h4 class="mandenPage">Prijs: €13,00</h4>
                   </div>
                 </div>
-                <p class="mandenPage">Deze mand bevat:</p>
-                <ol>
-                  <li class="mandenPage">Stumble Guys-figuur (knijpfiguur)</li>
-                  <li class="mandenPage">Planner</li>
-                  <li class="mandenPage">Mini floustiften</li>
-                  <li class="mandenPage">Indextabs</li>
-                  <li class="mandenPage">Pilot balpennen</li>
+                <p class="mandenPage">deze mand bevat:</p>
+                <ol class="mandenPage">
+                  <li>Stumble Guys-figuur (knijpfiguur)</li>
+                  <li>Planner</li>
+                  <li>Mini floustiften</li>
+                  <li>Indextabs</li>
+                  <li>Pilot balpennen</li>
                 </ol>
               </div>
             </div>
@@ -252,14 +252,14 @@
                   </div>
                 </div>
                 <p class="mandenPage">deze mand bevat:</p>
-                <ol>
-                  <li class="mandenPage">Springtouw</li>
-                  <li class="mandenPage">Weerstandbanden</li>
-                  <li class="mandenPage">Handtrainer</li>
-                  <li class="mandenPage">Yogamat</li>
-                  <li class="mandenPage">Bidon</li>
-                  <li class="mandenPage">Energierepen</li>
-                  <li class="mandenPage">Dadels</li>
+                <ol class="mandenPage">
+                  <li>Springtouw</li>
+                  <li>Weerstandbanden</li>
+                  <li>Handtrainer</li>
+                  <li>Yogamat</li>
+                  <li>Bidon</li>
+                  <li>Energierepen</li>
+                  <li>Dadels</li>
                 </ol>
               </div>
             </div>
@@ -322,12 +322,12 @@
                   </div>
                 </div>
                 <p class="mandenPage">deze mand bevat:</p>
-                <ol>
-                  <li class="mandenPage">Oreo crunchy bites</li>
-                  <li class="mandenPage">Haribo fun mix</li>
-                  <li class="mandenPage">Patisserie stroopwaffles</li>
-                  <li class="mandenPage">Milka chocolade naps mix</li>
-                  <li class="mandenPage">Chocolademelk-sticks</li>
+                <ol class="mandenPage">
+                  <li>Oreo crunchy bites</li>
+                  <li>Haribo fun mix</li>
+                  <li>Patisserie stroopwaffles</li>
+                  <li>Milka chocolade naps mix</li>
+                  <li>Chocolademelk-sticks</li>
                 </ol>
               </div>
             </div>
@@ -391,14 +391,14 @@
                   </div>
                 </div>
                 <p class="mandenPage">deze mand bevat:</p>
-                <ol>
-                  <li class="mandenPage">Cashewnoten</li>
-                  <li class="mandenPage">Fuze tea</li>
-                  <li class="mandenPage">Zure glimwormen</li>
-                  <li class="mandenPage">Haribo mega mix</li>
-                  <li class="mandenPage">Sprite</li>
-                  <li class="mandenPage">Doritos Bits sweet paprika</li>
-                  <li class="mandenPage">Snacks Of The World honey cashew</li>
+                <ol class="mandenPage">
+                  <li>Cashewnoten</li>
+                  <li>Fuze tea</li>
+                  <li>Zure glimwormen</li>
+                  <li>Haribo mega mix</li>
+                  <li>Sprite</li>
+                  <li>Doritos Bits sweet paprika</li>
+                  <li>Snacks Of The World honey cashew</li>
                 </ol>
               </div>
             </div>
